# cs126-final-project-snake

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: final_project_main.cc
include/: boarder.h  border.h  direction.h  extension.h  location.h  obstacle.h  segment.h  snake.h  snake_app.h  treat.h  utilities.h
src/: boarder.cc  border.cc  direction.cc  extension.cc  location.cc  obstacle.cc  segment.cc  snake.cc  snake_app.cc  treat.cc  utilities.cc
tests/: test.cc
